--- a/TestFile.html
+++ b/TestFile.html
@@ -9,7 +9,7 @@
             <td colspan="5">
                 <strong>Show </strong>
 
-                <strong> entries</strong>
+                <strong> <a href="Blah.html">entries</a></strong>
             </td>
             <td align="right">
                 <img src="ChrisBusking.jpg" width="300px" border="0" />
