--- a/VinBio.html
+++ b/VinBio.html
@@ -43,6 +43,7 @@ I am co-writer & co-creator of the "The Mackenzie Dylan Show". Writing is specia
 <p>
 Ted & I have exchanged creative ideas since high school. Ted appeared in plays, read extensively about entertainment, and danced to Van Halen music with a whimsy rarely displayed by heterosexual men. I sat like inert gas in front of my black & white T.V. Yet somehow the desire to write surfaced, and I indulged. A satire I wrote about a mutual friend got positive feedback from my peeps, and I was hooked. When Ted came to me about expanding my one-act-play "Release" into a web-series, I hadn't written anything in eight years. His expansive vision of an idea I had forgotten about has taken us and newest "Mackyd Partner" Chris Nicolo, on an exciting trip that we all hope is just beginning. Lastly, I like long walks in heavy traffic & Pokeno.
 <p>
+See my <a href="http://vikings211269yy.wix.com/vincemarinowritings">blog</a> for other random creative whims I may have.
 <p>
 <font size="4"><a href="TheCreators.html">Return to The Creators Page</a></font>
 </div>
