--- a/CastCrew.html
+++ b/CastCrew.html
@@ -39,6 +39,16 @@
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 <table>
 	<tr>
+		<td><img src="DrewBioPic.jpg" width="80px"></img>
+		</td>
+		<td width="220"><a href="DrewBio.html">Andrew Valins</a>
+		</td>
+		<td width="120">........
+		</td>
+		<td>Mackenzie Dylan
+		</td>
+	</tr>
+	<tr>
 		<td><img src="LupeBioPic.jpg" width="80px"></img>
 		</td>
 		<td width="220"><a href="LupeBio.html">Michael Lupinacci</a>
