--- a/LupeBio.html
+++ b/LupeBio.html
@@ -39,15 +39,17 @@
 <img src="LupeBioPic.jpg" width="640px"></img>
 </p>
 <div align="justify" style="width: 640px; float:left; margin:4; ">
+Essay by Ted Pirro
+<p>
 Michael Lupinacci is not an actor . In fact he's the only non-professional actor in "The Mackenzie Dylan Show" cast. However he was the first and only choice for the role he was born to play -Jesus Christ, the first guest on Mackenzie's imaginary talk show. (Also when I asked him to do it he replied "Sure, I already have the costume on the back seat of my car"-Really, I can't make this shit up!)
 <p>
-   He's not Olivier but he is an engaging, charismatic, larger than life personality who could do what I needed him to do. We've known each other for 20 years and I can describe him as both an adventurer and a philosopher (Fancy word for "Opinionated Wop" -in fact anyone within 50 paces of an Italian/American should be warned of the following credo "Everybody's entitled to my opinion!")
+He's not Olivier but he is an engaging, charismatic, larger than life personality who could do what I needed him to do. We've known each other for 20 years and I can describe him as both an adventurer and a philosopher (Fancy word for "Opinionated Wop" -in fact anyone within 50 paces of an Italian/American should be warned of the following credo "Everybody's entitled to my opinion!")
 <p>
-   The single best descriptive adjective however is "Perpetual".  The dude is always in perpetual motion, rarely sleeps and usually channels that energy on his Harley Road King Cruiser, taking off at a moments notice for parts unknown seeking.. something.. but doing it and not being passive in life.
+The single best descriptive adjective however is "Perpetual".  The dude is always in perpetual motion, rarely sleeps and usually channels that energy on his Harley Road King Cruiser, taking off at a moments notice for parts unknown seeking.. something.. but doing it and not being passive in life.
 <p>
-  Lup and I were former roommates. His rough exterior gives ways to a facile mind. We spent many late nights exchanging creative ideas back in forth like lightning rods. He previously helped organized an established Halloween haunted house in the area and would be drafted to play various ogres, goons or vexed military personnel warning of Zombie attacks so he has shown that he loves to ham it up!
+Lup and I were former roommates. His rough exterior gives ways to a facile mind. We spent many late nights exchanging creative ideas back in forth like lightning rods. He previously helped organized an established Halloween haunted house in the area and would be drafted to play various ogres, goons or vexed military personnel warning of Zombie attacks so he has shown that he loves to ham it up!
 <p>
-  He came on the talk show set with boundless enthusiasm-even suggesting some bits and reshaping some dialogue.  The idea of coming on Mac's set throwing loaves and fishes to the audience was his and it worked. It was funny! In fact we took him out of his comfort zone and he delivered a definitive performance showcasing the range of emotion that I needed him to give!...and his Jesus is waaaaay less whiney than that pussy Jim Caviezel.
+He came on the talk show set with boundless enthusiasm-even suggesting some bits and reshaping some dialogue.  The idea of coming on Mac's set throwing loaves and fishes to the audience was his and it worked. It was funny! In fact we took him out of his comfort zone and he delivered a definitive performance showcasing the range of emotion that I needed him to give!...and his Jesus is waaaaay less whiney than that pussy Jim Caviezel.
 <p>
 <p>
 <font size="4"><a href="CastCrew.html">Return to the Cast & Crew Page</a></font>
