--- a/Origin.html
+++ b/Origin.html
@@ -37,6 +37,8 @@
 <p align = "left"><b><font size="5">Origin</font></b>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
+Essay By Ted Pirro-Co-Creator/Co-writer/Director/Fluffer of "The Mackenzie Dylan Show"
+<p>
 The story of "The Mackenzie Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an airtight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!  33 years ago, I was the pesky, unatheletic, weirdo kid 2 years younger who was drawn to the older, cooler, jockey guy-temperamental but essentially kind. The older guy humored the awkward protege but the years would evolve the relationship from "tolerance" to a mutually kindred friendship.The neighbors of a Stamford, CT. apartment complex became roommates in South Florida and eventually I'd be honored to be the best man at his wedding. The foundation of it all was our mutual capacity to dream big and the exchanging of ideas-late night bull sessions where the solving of the world's problems coincided with the next great American screenplay.
 <p>
 Vince always had the dexterity for stringing words together in a cohesive and melodic (and prolific) fashion. (An excellent poet he once emerged from the rest room from our swinging bachelor pad In West Palm Beach proclaiming "While I was taking a shit, I wrote a sequel to 'The Iliad'" - I told you the boy works quick.)
