--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
 				</a></font></p>
 				<hr id='hrdotted' />
 		  	</div>
+		  	WARNING: Contains Adult language and images that are feared by a hypocritical bourgeois society - discretion advised!
 
 	</div>
     <div align="justify" style="width: 390px; float:left; margin:4; ">
 		<iframe src="http://player.vimeo.com/video/73292195" width="375"  height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 		</iframe>
+		<p align = "left"><b>Episode 1: UNEMPLOYED JESUS</b>
+			<div style="display: inline-block; width: 370px;>
+				<p align="justify"><font size=2>
+ 				Mack Dylan is in hot water. One of his columns criticizing the religious right and the inadequacy of religion has caused a fire storm - boycotts have been threatened causing our atheist inclined hero to stress.<br>
+				<hr id='hrdotted' />
+			</div>
+
 		<p align = "left"><b><font size="4">Exclusive - The ACTUAL controversal Sarah Palin column that got Macky D fired</font></b>
 			<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
@@ -116,7 +124,7 @@
 				<a id="uniqueid" href="PhotoGallery.html">Photo Gallery</a>
 				</font><br>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="PhotoGallery.html">Video</a>
+				<a id="uniqueid" href="Video.html">Video</a>
 				</font><br>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="MackyFacts.html">Macky D's Little Known Facts</a>
