--- a/CastCrew.html
+++ b/CastCrew.html
@@ -49,6 +49,16 @@
 		</td>
 	</tr>
 	<tr>
+		<td><img src="ShannonBioPic.jpg" width="80px"></img>
+		</td>
+		<td width="220"><a href="ShannonBio.html">Shannon Veedock</a>
+		</td>
+		<td width="120">........
+		</td>
+		<td>Jim Gaborini
+		</td>
+	</tr>
+	<tr>
 		<td><img src="LupeBioPic.jpg" width="80px"></img>
 		</td>
 		<td width="220"><a href="LupeBio.html">Michael Lupinacci</a>
