--- a/ChristTour.html
+++ b/ChristTour.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+<!--	<link rel="stylesheet" type="text/css" charset="UTF-8" href="mackdee.css">  -->
 <style>
 #uniqueid:link {color:black; text-decoration: none;}
 #uniqueid:hover {color:red; text-decoration: underline;}
