--- a/Video.html
+++ b/Video.html
@@ -1,7 +1,6 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
 <style>
 #uniqueid:link {color:black; text-decoration: none;}
 #uniqueid:hover {color:red; text-decoration: underline;}
@@ -35,31 +34,12 @@
 </table>
 <div style="width:1200; ">
 
-<p align = "left"><b><font size="5">The Creators</font></b>
+<p align = "left"><b><font size="5">Video</font></b>
 <p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
-<table>
-	<tr>
-		<td><img src="VinBioPic.jpg" width="80px"></img>
-		</td>
-		<td width="220"><a href="VinBio.html">Vince Marino</a>
-		</td>
-		<td width="120">........
-		</td>
-		<td>Co-Creator / Writer
-		</td>
-	</tr>
-	<tr>
-		<td><img src="PirroAtOscars.jpg" width="80px"></img>
-		</td>
-		<td width="220"><a href="PirroBio.html">Ted Pirro</a>
-		</td>
-		<td width="120">........
-		</td>
-		<td>Co-Creator / Writer / Director / Fluffer
-		</td>
-	</tr>
-</table>
+Coming Soon!
+<br>
+<img src="FredFlipoff.jpg">
 <p>
 <p>
 <font size="4"><a href="index.html">Return to the Home Page</a></font>
