--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
 				<a id="uniqueid" href="CastCrew.html">Cast & Crew</a>
 				</font><br>
 				<p align="justify"><font size=2>
+				<a id="uniqueid" href="Credits.html">Full Production Credits</a>
+				</font><br>
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="PhotoGallery.html">Photo Gallery</a>
 				</font><br>
 				<p align="justify"><font size=2>
