--- a/Credits.html
+++ b/Credits.html
@@ -55,26 +55,26 @@
 			<br>
             STARRING
 			<br>
-            Andrew Valins…..Mac
+            Andrew Valins ... Mac
 			<br>
             CO-STARRING
             <br>
-            Shannon Veedock…..Jim<br>
-            Michelle Rae…..Karen<br>
-            Vanessa David…..Announcer/Waitress<br>
+            Shannon Veedock ... Jim<br>
+            Michelle Rae ... Karen<br>
+            Vanessa David ... Announcer/Waitress<br>
 			<br>
             THE BAND OF MAKE BELIEVE:<br>
-                      Chris Nicolo…..Drums/Musical Director<br>
-                      Chris Fox…..Guitar<br>
-                      J.C. Alza…..Bass<br>
-                      Andy Wacht…..Keyboards<br>
+                      Chris Nicolo ... Drums/Musical Director<br>
+                      Chris Fox ... Guitar<br>
+                      J.C. Alza ... Bass<br>
+                      Andy Wacht ... Keyboards<br>
 			<br>
             FEATURING<br>
 			<br>
-            Frank Nicolo…..Henry<br>
-            Jennifer Bartram-Schmitt…..Reporter<br>
-            Pete "Re-Pete" Goben…..Priest<br>
-            "Fat Fuck" Frankie D’Italiano…..Inquisitive teabagger<br>
+            Frank Nicolo ... Henry<br>
+            Jennifer Bartram-Schmitt ... Reporter<br>
+            Pete "Re-Pete" Goben ... Priest<br>
+            "Fat Fuck" Frankie D’Italiano ... Inquisitive Teabagger<br>
 			<br>
             And
 			<br>
