--- a/20140901Feature.html
+++ b/20140901Feature.html
@@ -39,7 +39,7 @@
 <p align = "left"><b><font size="2">By Vince Marino & Ted Pirro</font></b>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
-It’s one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.
+It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.
 <p>
 "Is your son a sissy?  Has he gone down so much he has stretch marks on his forehead? Is the only way he'll sit on a stool is by turning it upside down? Has your parish priest seen more virgin dick than a urinal at a Star Trek Convention?  Or perhaps your daughter has examined more vaginas than an overworked gynecologist?  Then they need to be enrolled in- Dr. Marcus Bachmann's Hetero House: Where     Gay is a four-letter word."
 <p>
