--- a/Credits.html
+++ b/Credits.html
@@ -57,6 +57,7 @@
 			<br>
             Andrew Valins ... Mac
 			<br>
+			<br>
             CO-STARRING
             <br>
             Shannon Veedock ... Jim<br>
@@ -74,7 +75,7 @@
             Frank Nicolo ... Henry<br>
             Jennifer Bartram-Schmitt ... Reporter<br>
             Pete "Re-Pete" Goben ... Priest<br>
-            "Fat Fuck" Frankie D’Italiano ... Inquisitive Teabagger<br>
+            "Fat Fuck" Frankie D'Italiano ... Inquisitive Teabagger<br>
 			<br>
             And
 			<br>
