--- a/TheCreators.html
+++ b/TheCreators.html
@@ -40,9 +40,9 @@
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 <table>
 	<tr>
-		<td><img src="VinBioPic.jpg" width="80px"></img>
+		<td><img src="VinBioPicS.jpg" width="80px"></img>
 		</td>
-		<td width="220"><a href="VinBio.html">Vince Marino</a>
+		<td width="220"><a href="VinBio.html">Vincent Marino</a>
 		</td>
 		<td width="120">........
 		</td>
