--- a/TheCreators.html
+++ b/TheCreators.html
@@ -50,7 +50,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td><img src="PirroAtOscars.jpg" width="80px"></img>
+		<td><img src="PirroBioPicS.jpg" width="80px"></img>
 		</td>
 		<td width="220"><a href="PirroBio.html">Ted Pirro</a>
 		</td>
