--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
 				<hr id='hrdotted' />
 			</div>
 
+		<p align = "left"><b><font size="4">MADONN': "JERSEY SHORE" & THE DECLINE OF WESTERN CIVILIZATION</font></b>
+			<div style="width: 80px; float:left; margin:4; "><img src="Snooki.jpg" width="80px" height="80px"></div>
+			<div style="display: inline-block; width: 290px;>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="JerseyShore.html">Ladies and Gentlemen, It is not my intention to alarm you but we are dealing with a tremendous threat to the fabric of our society. It's all over the news and even our politicians are getting involved.
+				</a></font><br>
+				<hr id='hrdotted' />
+			</div>
+
 		<p align = "left"><b><font size="4">Assorted Shit</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="CastCrew.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
