--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<hr id='hrdotted' />
 			</div>
 
-		<p align = "left"><b><font size="4">MADONN': "JERSEY SHORE" & THE DECLINE OF WESTERN CIVILIZATION</font></b>
+		<p align = "left"><b><font size="4">MADONN': "Jersey Shore" & the decline of Western civilization</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="Snooki.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
