--- a/JerseyShore.html
+++ b/JerseyShore.html
@@ -35,20 +35,20 @@
 <div style="width:1200; ">
 
 <p align = "left"><b><font size="5">MADONN': "JERSEY SHORE" & THE DECLINE OF WESTERN CIVILIZATION</font></b>
+<div align="justify" style="width: 900px; float:left; margin:4; ">
 </p>
 <p align = "left"><b><font size="2">(Note: The following was written by Macky D. Co-Creator Ted "Spicy Meatball" Pirro on April 10, 2010 during the height of "Jersey City" mania both pro and con. Enjoy!)</font></b>
 </p>
-<div align="justify" style="width: 900px; float:left; margin:4; ">
 Ladies and Gentlemen, It is not my intention to alarm you but we are dealing with a tremendous threat to the fabric of our society. It's all over the news and even our politicians are getting involved. Apparently it's important enough to divert their attention from the threat of terrorism, the precarious economy and the health care debate. Those of us who know what's best for us have seen the REAL enemy and it's ...ITALIANS!
 <p>
 For the uninitiated there is a big brew ha ha over the recently completed first season of an MTV reality show entitled JERSEY SHORE. The premise centers around a cluster of monosyllabic mooks of Italian heritage that share a houseboat on the jersey shore. These cadre of cretins resemble third tier extras from "The Sopranos" while displaying more six packs than your corner liquor store and more suntans than brains. Most controversial are the participant's frequent referrals to themselves as 'guidos' and 'guidettes', which has gotten up the ass of such organizations as "The National Italian American Foundation" and "The Order of Sons of Italy In America" and probably "The International House Of Pancakes" as well.
 <p>
-In full disclosure, I must confess that I have not actually watched a complete episode of this pageantry. My lone exposure being a YouTube clip of a petite firecracker identified only as "Snooki" with layers of big hair set with enough Aqua velvet to ignite a small zeppelin. This enchantress proceeded to pontificate on the joys of dating men who are "built but not too brainy". (I shit you not –exact words!) My I.Q. plummeted faster then the NASDAQ on 9/12/2001! Once I eventually recovered brain cells, I reconciled the shows appeal - a sort of 'Schadenfreude' for young middle class Waspish types with no ethnic identity. Simultaneously they can feel superior to and indulge in this forbidden fruit of an exotic yet rougher culture. Just replace the Jerry Springer White Trash mutants with guidos.
+In full disclosure, I must confess that I have not actually watched a complete episode of this pageantry. My lone exposure being a YouTube clip of a petite firecracker identified only as "Snooki" with layers of big hair set with enough Aqua velvet to ignite a small zeppelin. This enchantress proceeded to pontificate on the joys of dating men who are "built but not too brainy". (I shit you not - exact words!) My I.Q. plummeted faster then the NASDAQ on 9/12/2001! Once I eventually recovered brain cells, I reconciled the shows appeal - a sort of 'Schadenfreude' for young middle class Waspish types with no ethnic identity. Simultaneously they can feel superior to and indulge in this forbidden fruit of an exotic yet rougher culture. Just replace the Jerry Springer White Trash mutants with guidos.
 <p>
 <table border=0 width=638>
 	<tr>
 		<td align="center">
-		    <img src="Snooki.jpg"></img>
+		    <img src="Snooky.jpg"></img>
 		</td>
 	</tr>
 	<tr>
@@ -67,7 +67,7 @@ Just your average, ordinary Bensenhurst guido<br>
 Then one day he was shootin' Mullenyams<br>
 When a bullet ricocheted, hit him in his friggin' arm.<br>
 He won a lawsuit from the city-40 million-what a wad!<br>
-His goombahs said "Hey V—don't be fuckin' Stunad!"<br>
+His goombahs said "Hey V - don't be fuckin' Stunad!"<br>
 They said "'California' is the place you outta be"<br>
 So he packed up his Camaro and he moved to Beverly-<br>
 Hills that is-Porno stars-Swimmin' pools and WEED"
@@ -78,7 +78,7 @@ Not to be outdone, ABC is developing a working class Italian version of "Who Wan
 <p>
 Unfortunately all this attention on the "earthier" side of Italian culture has brought out the "brave and compassionate" souls who despite that pesky first amendment have risen to save us from ourselves. The most vocal front men have been New Jersey Senator Joseph F. Vitale(D.) and Andre DiMino, president of something called UNICO. Both have demanded VIACOM cancel "Jersey Shore". The latter has even issued a statement declaring:<br>
 "(MTV) are blatently as well as subliminally bashing Italian-Americans with every technique possible.(The cast) are an embarrassment to themselves, their heritage and their families".
-Sen. Vitale’s attachment to this issue is hardly surprising given politicians inadequacies with relevent issues usually fore shadow's attacking symbolic ones (and as the late, great George Carlin once reminded us "attacking symbols are for the 'Symbol' minded"). The good senator has projected substance to a shadow to appease constituencies who probably line his coffers. He has even going as far to proclaim that the show "violates New Jersey hate and bias crimes laws. The acts (documented on the show) violate the spirit of New Jersey law and jeopardize the open pursuit of freedom and opportunity."
+Sen. Vitale's attachment to this issue is hardly surprising given politicians inadequacies with relevent issues usually fore shadow's attacking symbolic ones (and as the late, great George Carlin once reminded us "attacking symbols are for the 'Symbol' minded"). The good senator has projected substance to a shadow to appease constituencies who probably line his coffers. He has even going as far to proclaim that the show "violates New Jersey hate and bias crimes laws. The acts (documented on the show) violate the spirit of New Jersey law and jeopardize the open pursuit of freedom and opportunity."
 <p>
 Such rhetoric makes one imagine a wave of agitated constituents of Italian ancestry frantically phoning the senator with an exaggerated Chico Marx/Super Mario accent:
 <p>
