--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           	<div style="display: inline-block; width: 290px;>
 				<p  align="justify"><font size=2>
 				<a id="uniqueid" href="ChristTour.html">Considering his life and death resulted in thousands of years of hysteria and that his recent "resurrection" will surely produce more,
-				The most influential man in human history is surprisingly laid back and seems a bit bemused by the mania he inspires. <p>"Dude, Patti Smith never died for MY sins" cracks
+				The most influential man in human history is surprisingly laid back and seems a bit bemused by the mania he inspires. <p>"Dude, Patti Smith never died for MY sins" cracks the savior.  "I'm more popular than John Lennon and The Beatles now!" he chortles.
    				</a></font>
 				<hr id='hrdotted' />
    			</div>
@@ -58,6 +58,7 @@
           	<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="PSA.html">In an effort to erase mounting tension and suspicion within the police and The African-Americans, police officers are giving FREE Heimlich maneuver demonstrations in the Black communities.
+				<p>Apparently, choking related deaths have increased in African-American males in the past year-it is now third behind
 				</a></font></p>
 				<hr id='hrdotted' />
 		  	</div>
@@ -70,7 +71,7 @@
 		<p align = "left"><b>Episode 1: UNEMPLOYED JESUS</b>
 			<div style="display: inline-block; width: 370px;>
 				<p align="justify"><font size=2>
- 				Mack Dylan is in hot water. One of his columns criticizing the religious right and the inadequacy of religion has caused a fire storm - boycotts have been threatened causing our atheist inclined hero to stress.<br>
+ 				Mack Dylan is in hot water. One of his columns criticizing the religious right and the inadequacy of religion has caused a fire storm - boycotts have been threatened causing our atheist inclined hero to stress.  A Dinner with his Catholic inclined best friend Jim triggers a philosophical discussion that gets his pal heated.<br>
 				<hr id='hrdotted' />
 			</div>
 
@@ -78,7 +79,7 @@
 			<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="20140901Editorial.html">From The New York Daily News Oct. 4, 2011: <p>Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional
+				<a id="uniqueid" href="20140901Editorial.html">From The New York Daily News Oct. 4, 2011: <p>Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for the most important office on earth?
 				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
@@ -147,6 +148,11 @@
 	</div>
 
 </div>
+
+<footer>
+<hr>
+  <p>Web Design by <a href="mailto:computercio@yahoo.com">Xanadu Entertainment</a></p>
+</footer>
 
 </body>
 
