--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div style="width: 80px; float:left; margin:4; "><img src="Snooky.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="JerseyShore.html">Ladies and Gentlemen, It is not my intention to alarm you but we are dealing with a tremendous threat to the fabric of our society. It's all over the news and even our politicians are getting involved.
+				<a id="uniqueid" href="JerseyShore.html">Ladies and Gentlemen, It is not my intention to alarm you but we are dealing with a tremendous threat to the fabric of our society. It's all over the news and even our politicians are getting involved.  Apparently it's important enough to divert their attention from the threat of terrorism, the precarious economy and
 				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
